--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "*.{js,scss,less}": "yoshi lint"
   },
   "dependencies": {
+    "@wix/ambassador": "^4.0.444",
+    "@wix/ambassador-node-workshop-scala-app": "^1.0.7",
     "@wix/wix-axios-config": "latest",
     "@wix/wix-bootstrap-greynode": "latest",
     "@wix/wix-bootstrap-hadron": "latest",
@@ -33,6 +35,7 @@
     "@wix/wix-i18n-config": "^5.0.0",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
+    "body-parser": "^1.19.0",
     "bootstrap-hot-loader": "^4.1.0",
     "express": "^4.17.1",
     "prop-types": "~15.6.0",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.3.0",
+    "@wix/ambassador-testkit": "^5.0.305",
     "@wix/fedops-logger": "^5.0.0",
     "@wix/wix-bootstrap-testkit": "latest",
     "@wix/wix-config-emitter": "latest",
